--- a/PySEDfitOG_DOC.lyx
+++ b/PySEDfitOG_DOC.lyx
@@ -31,7 +31,16 @@
 \index_command default
 \paperfontsize 12
 \spacing double
-\use_hyperref false
+\use_hyperref true
+\pdf_bookmarks true
+\pdf_bookmarksnumbered false
+\pdf_bookmarksopen false
+\pdf_bookmarksopenlevel 1
+\pdf_breaklinks false
+\pdf_pdfborder false
+\pdf_colorlinks true
+\pdf_backref false
+\pdf_pdfusetitle true
 \papersize default
 \use_geometry false
 \use_package amsmath 1
@@ -111,8 +120,8 @@ github.com/anazalea/PySEDfitOG
 
 .
  But if you're reading this, you already knew that.
- After you've downloaded the repository's contents you might have to do
- a couple of things before you get SEDfitting.
+ After you've downloaded the repository's contents you should do a couple
+ of things before you get SEDfitting.
 \end_layout
 
 \begin_layout Standard
@@ -157,7 +166,7 @@ target "http://scikit-learn.org/stable/"
 \end_inset
 
 .
- To make sure everything is in order, consider executing the following commands:
+ To make sure everything is in order, execute the following commands:
 \end_layout
 
 \begin_layout Standard
@@ -197,8 +206,46 @@ PYTHONPATH=$PYTHONPATH:/path/stuff/PySEDfitOG/src/
 export PYTHONPATH
 \end_layout
 
+\begin_layout Standard
+
+\family typewriter
+alias pymakebbsed=
+\begin_inset Quotes eld
+\end_inset
+
+python /path/stuff/PySEDfitOG/src/SEDmanipulation/makebbsed.py
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\family typewriter
+alias pyfitsed=
+\begin_inset Quotes eld
+\end_inset
+
+python /path/stuff/PySEDfitOG/src/ModelSelection/fitSED.py
+\begin_inset Quotes erd
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section
 makeBBsed
+\end_layout
+
+\begin_layout Standard
+Now you can go to the /PySEDfitOG/Testfiles folder and run
+\end_layout
+
+\begin_layout Standard
+
+\family typewriter
+pymakebbsed testmakebbsed.param
 \end_layout
 
 \begin_layout Subsection
@@ -832,13 +879,27 @@ Currently unsupported.
 fitSED
 \end_layout
 
+\begin_layout Standard
+If you ran 
+\family typewriter
+pymakebbsed testmakebbsed.param
+\family default
+, you can go to the /PySEDfitOG/Testfiles folder and run
+\end_layout
+
+\begin_layout Standard
+
+\family typewriter
+pyfitsed testfitsed.param
+\end_layout
+
 \begin_layout Subsection
 fitSED Parameters
 \end_layout
 
 \begin_layout Standard
 \begin_inset Tabular
-<lyxtabular version="3" rows="25" columns="3">
+<lyxtabular version="3" rows="24" columns="3">
 <features rotate="0" islongtable="true" longtabularalignment="center">
 <column alignment="center" valignment="top" width="1.2in">
 <column alignment="center" valignment="top" width="1.5in">
@@ -1008,7 +1069,7 @@ mag
 \begin_layout Plain Layout
 
 \size footnotesize
-jansky
+flux
 \end_layout
 
 \end_inset
@@ -1044,25 +1105,25 @@ data_param
 \begin_layout Plain Layout
 
 \size footnotesize
-name column# format
+column# name format
 \end_layout
 
 \begin_layout Plain Layout
 
 \size footnotesize
 e.g.
- data_param ID 0 %i
+ data_param 0 ID %i
 \end_layout
 
 \begin_layout Plain Layout
 
 \size footnotesize
 e.g.
- data_param 
+ data_param 12
 \begin_inset Formula $\mathrm{z_{spec}}$
 \end_inset
 
- 12 %f
+ %f
 \end_layout
 
 \end_inset
@@ -1178,7 +1239,7 @@ mag
 \begin_layout Plain Layout
 
 \size footnotesize
-jansky
+flux
 \end_layout
 
 \end_inset
@@ -1214,21 +1275,21 @@ model_param
 \begin_layout Plain Layout
 
 \size footnotesize
-name colum# format  scaleFlag
+colum# name format  scaleFlag
 \end_layout
 
 \begin_layout Plain Layout
 
 \size footnotesize
 e.g.
- z 1 %.2f False
+ 1 z %.2f False
 \end_layout
 
 \begin_layout Plain Layout
 
 \size footnotesize
 e.g.
- mass 2 %.3e True
+ 2 mass %.3e True
 \end_layout
 
 \end_inset
@@ -1320,42 +1381,6 @@ output.txt
 \size footnotesize
 Name of output file.
  Can include full path.
-\end_layout
-
-\end_inset
-</cell>
-</row>
-<row>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\family typewriter
-\size footnotesize
-output_file
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\size footnotesize
-outputFile.txt
-\end_layout
-
-\end_inset
-</cell>
-<cell alignment="block" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
-\begin_inset Text
-
-\begin_layout Plain Layout
-
-\size footnotesize
-Filename
 \end_layout
 
 \end_inset
@@ -1623,20 +1648,15 @@ false
 \begin_inset Text
 
 \begin_layout Plain Layout
+
+\size footnotesize
 If turned on, each line of data will be perturbed mcits times 
 \shape italic
-\size footnotesize
 before
 \shape default
-\size default
  fitting and each perturbed line of data will be fit individually.
- You'll end up with an output file of length 
-\family typewriter
-\size footnotesize
-mcits
-\family default
-\size default
-*len(data) and for later analysis
+ You'll end up with an output file of length mcits*len(data) and for later
+ analysis
 \end_layout
 
 \end_inset
